--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -93,6 +93,13 @@
     </div>
 
     <div class="item_inner is-between animation-top">
+        <div class="img_inner is-center img_artle">
+            <div class="frame_skew ">
+                <a href="#" class="is-center">
+                    <img src="/img/inner/2.jpg" alt="">
+                </a>
+            </div>
+        </div>
         <div class="text_inner">
             <div class="item_time">
                 DEC 4, 2024
@@ -107,7 +114,7 @@
                 Lớp phủ mịn, chống mài mòn, giúp gia tăng tuổi thọ của sản phẩm.
             </p>
         </div>
-        <div class="img_inner is-center">
+        <div class="img_inner is-center img_inner_frist">
             <div class="frame_skew ">
                 <a href="#" class="is-center">
                     <img src="/img/inner/2.jpg" alt="">
