--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phụ Kiện Thang Máy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link rel="stylesheet" href="/css/app.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/reponsive.css">
 </head>
 <body>
     <div class="container_web">
@@ -17,6 +19,11 @@
                             <img src="/img/logo.png" alt="">
                         </a>
                     </figure>
+                    <div class="search search_mobie is-center">
+                        <i class="bi bi-search"></i>
+                        <i class="bi bi-x btn-close-search"></i>
+                        <input type="text" placeholder="Enter name part..." class="input_search">
+                    </div>
                     <nav class="nav_wrapp">
                         <ul class="head_nav">
                             <li class="item_nav active tab-1">
@@ -48,16 +55,17 @@
                     </nav>
                     <div class="head_right is-between">
                         <div class="search">
-                            <i class="bi bi-search"></i>
-                            <input type="text" placeholder="Enter name part...">
+                            <i class="bi bi-search btn_search"></i>
+                            <input type="text" placeholder="Enter name part..." class="input_search">
                         </div>
-                        <div class="is-center" style="gap:10px; margin-left:20px;">
+                        
+                        {{!-- <div class="is-center" style="gap:10px; margin-left:20px;">
                             <div class="circle"><i class="bi bi-bell"></i></div>
                             <div class="circle"><i class="bi bi-cart"></i></div>
                             <div class="circle">
                                 <img src="https://www.dropbox.com/scl/fi/wejke33icwbzgcb1xhhv4/2.jpg?rlkey=mi9dylwxime6zkcp4kgu1vlcx&st=0ghf9l3f&dl=1">
                             </div>
-                        </div>
+                        </div> --}}
                         {{!-- <div class="caller is-center">
                             <i class="bi bi-telephone-fill"></i>
                             <div class="contact_phone">
@@ -66,6 +74,10 @@
                             </div>
                         </div> --}}
                     </div>
+
+                    <nav class="menu_nav_bar">
+                        <i class="bi bi-list"></i>
+                    </nav>
                 </div>
             </div>
         </header>
