--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -84,18 +84,13 @@
                 <div class="line"></div>
             </div>
             <div class="layout">
-                <ul class="environment_list">
-                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
-                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
-                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
-                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
-                </ul>
-                <ul class="environment_list">
-                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
-                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
-                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
-                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
-                </ul>
+                <div class="environment_list">
+                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
+                </div>
+                
             </div>
         </div>
     </div>
@@ -109,11 +104,11 @@
         <div class="line"></div>
     </div>
     <div class="layout">
-        <ul class="environment_list" style="margin-top: 20px;">
-            <li class="item_environment"><img src="/img/about/1.jpg" alt=""></li>
-            <li class="item_environment"><img src="/img/about/1.jpg" alt=""></li>
-            <li class="item_environment"><img src="/img/about/1.jpg" alt=""></li>
-        </ul>
+        <div class="environment_list" style="margin-top: 20px;">
+            <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
+            <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
+            <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
+        </div>
         <p style="text-align: center; margin-top: 15px">As a company, we have grown steadily in size and revenue.  Our export value of RMB 300 million in 2022 is a testament to our commitment to serve our customers better.</p>
     </div>
 </div>
