--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -135,7 +135,57 @@
                     </a>
                 </section>
             </footer>
+            
         </main>
+        <div class="model">
+            <div class="container_mobie">
+                <ul>
+                    <li >
+                        <a href="/" class="is-between">
+                            <div>
+                                <i class="bi bi-house"></i>
+                                HOME
+                            </div>
+                        </a>
+                    </li>
+                    <li >
+                        <a href="/products" class="is-between">
+                            <div>
+                                <i class="bi bi-box"></i>
+                                products
+                            </div>
+                        </a>
+                    </li>
+                    <li >
+                        <a href="/news" class="is-between">
+                            <div>
+                                <i class="bi bi-megaphone-fill"></i>
+                                news
+                            </div>
+                        </a>
+                    </li>
+                    <li >
+                        <a href="/about-us" class="is-between">
+                            <div>
+                                <i class="bi bi-people-fill"></i>
+                                about-us
+                            </div>
+                        </a>
+                    </li>
+                    <li >
+                        <a href="/contact" class="is-between">
+                            <div>
+                                <i class="bi bi-person-lines-fill"></i>
+                                contact-us
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="close_mobie_bar is-center">
+                <i class="bi bi-x"></i>
+            </div>
+        </div>
     </div>
     <script src="/js/app.js" defer></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
