--- a/src/resources/views/products/detail.hbs
+++ b/src/resources/views/products/detail.hbs
@@ -107,10 +107,11 @@
     <h1 class="title_form">Leave Your Message</h1>
     <form action="" class="form_contact">
         <ul>
-            <li><input type="text" placeholder="* Name"></li>
-            <li><input type="email" placeholder="* Email(We will reply you via email in 24 hours)"></li>
-            <li><input type="text" placeholder="* Phone/WhatsApp/WeChat (Very important)"></li>
-            <li><textarea placeholder="* Enter product details such as size, color, materials etc. and other specific requirements to receive an accurate quote."></textarea></li>
+            <li><input type="text" placeholder="* Name" name="name"></li>
+            <li><input type="email" placeholder="* Email(We will reply you via email in 24 hours)" name="email"></li>
+            <li><input type="text" placeholder="* Phone/WhatsApp/WeChat (Very important)" name="phone"></li>
+            <li><input type="text" placeholder="* Subject" name="subject"></li>
+            <li><textarea placeholder="* Enter product details such as size, color, materials etc. and other specific requirements to receive an accurate quote." name="message"></textarea></li>
             <li><input type="submit" value="Send" class="submit"></li>
         </ul>
     </form>
