--- a/src/resources/views/products/products.hbs
+++ b/src/resources/views/products/products.hbs
@@ -52,170 +52,13 @@
     </aside>
     <div class="list_products">
         <div class="wrapper_list_products">
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
+            <ul class="arrow_card is-between arrow_card_1"></ul>
 
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
+            <ul class="arrow_card is-between arrow_card_2"></ul>
 
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
+            <ul class="arrow_card is-between arrow_card_3"></ul>
 
             <div class="page_bar is-center">
-                <button class="number_page active">1</button>
-                <button class="number_page">2</button>
-                <button class="number_page">3</button>
-                <button class="number_page">4</button>
-                <button class="number_page">5</button>
-                <button class="number_page">6</button>
-                <button class="next">Next <i class="bi bi-chevron-right"></i></button>
-                <button class="next_all"><i class="bi bi-chevron-double-right"></i></button>
-                <button class="current">Page 1 / 105</button>
-
             </div> 
         </div>
     </div>
