--- a/src/resources/views/news/news.hbs
+++ b/src/resources/views/news/news.hbs
@@ -20,18 +20,32 @@
             </div>
         </li>
 
-
-        <div class="page_bar is-center">
-            <button class="number_page active">1</button>
-            <button class="number_page">2</button>
-            <button class="number_page">3</button>
-            <button class="number_page">4</button>
-            <button class="number_page">5</button>
-            <button class="number_page">6</button>
-            <button class="next">Next <i class="bi bi-chevron-right"></i></button>
-            <button class="next_all"><i class="bi bi-chevron-double-right"></i></button>
-            <button class="current">Page 1 / 105</button>
-
-        </div> 
+        <li class="item_news is-between">
+            <a href="#" class="link_news">
+                <img src="/img/news/1.jpg" alt="">
+            </a>
+            <div class="content_news">
+                <a href="/news/:slug" class="heading_title">
+                    What is the structure of FUJISJ Escalator Handrails?
+                </a>
+                <time>by admin on 24-11-26</time>
+                <p>
+                    FUJISJ Escalator Handrail Belt ———– Super durability with 200,000 times of crack-free use.
+                    Coating:
+                    • Antioxidant, smooth, wear-resistant, and corrosion-resistant
+                    • Adopting polysilazane (PSZ), which is the best antioxidant and anti-corrosion material 
+                    in China, with higher cost and better quality sdsa ffsadas sf
+                </p>
+                <a href="/news/:slug" class="read_more">read more</a>
+            </div>
+        </li>
     </ul>
+    <div class="page_bar is-center">
+        <button class="number_page active">1</button>
+        <button class="number_page">2</button>
+        <button class="number_page">3</button>
+        <button class="next">Next <i class="bi bi-chevron-right"></i></button>
+        <button class="next_all"><i class="bi bi-chevron-double-right"></i></button>
+        <button class="current">1/5</button>
+    </div> 
 </div>
