--- a/src/resources/views/products/detail.hbs
+++ b/src/resources/views/products/detail.hbs
@@ -2,18 +2,15 @@
    <div class="information_product">
         <div class="level_left">
             <div class="wrapper_img_product">
-                <img class="img-js-product-main" src="/img/products/1.jpg" alt="">
+                
             </div>
             <ul class="wrapper_list_img_product is-between">
-                <li class="img-js-product" ><img  src="/img/products/2.jpg" alt=""></li>
-                <li class="img-js-product" ><img  src="/img/products/3.jpg" alt=""></li>
-                <li class="img-js-product" ><img  src="/img/products/4.jpg" alt=""></li>
-                <li class="img-js-product" ><img  src="/img/products/5.jpg" alt=""></li>
+                
             </ul>
         </div>
         <div class="wrapper_detail_infor">
-            <h3>Schindler Elevator Parts Escalator Handrails SDS SWE</h3>
-            <p class="sub_heading">Embedded with 18-21 steel wire ropes, each twisted into 9 strands, which increases the tension of the handrail and greatly improves the safety factor.</p>
+            <h3 class="name_product"></h3>
+            <p class="sub_heading"></p>
             <div class="specifications">
                 <div class="specifications_left">
                     <ul class="list_specifications">
@@ -90,12 +87,10 @@
                 <h3>Product Display</h3>
             </div>
             <div class="list_img_detail">
-                <img src="/img/products/1.jpg" alt="">
-                <img src="/img/products/2.jpg" alt="">
-                <img src="/img/products/3.jpg" alt="">
+                
             </div>
-            <p>The handrail is a customized product, which is customized according to the customer's meter and style. Please confirm the meter carefully. If it is too long or too short, it will not be usable.</p>
-            <p>Multiple colors available, easy customization</p>
+            <p class="description_product">The handrail is a customized product, which is customized according to the customer's meter and style. Please confirm the meter carefully. If it is too long or too short, it will not be usable.</p>
+            <p class="number_stock">Multiple colors available, easy customization</p>
             <hr>
             <p style="padding: 0">Previous: <span>OTIS Escalator Step Chain Pitch 135.4mm</span></p>
             <p style="padding: 0">Next: <span>OTIS Elevator Parts Escalator Chain Pitch 135.7mm</span></p>
